# portfolio

./: .README.md.swp  README.md
c_cpp/: README.md
c_cpp/c_cpp_tests/: README.md  find_coroutines.c  find_systhread.c  test_affinity_wakeup.c
c_cpp/c_multiarch/: README.md  architecture.h  platform_getopt.c  platform_posix.c  platform_winapi.c
c_cpp/c_scheduler_on_coroutines/: README.md  co_routine.h  co_routine_types.h  coro.c  coro.h  coro_alloc.h  coro_arch.h  coro_startup_Linux_aarch64.S  coro_startup_Linux_armv7.S  coro_transfer_Linux_aarch64.S  coro_transfer_Linux_armv7.S  coro_transfer_Linux_x86_32.S  coro_transfer_Linux_x86_64.S  coro_transfer_Windows_x86_32.S  coro_transfer_Windows_x86_64.S  coro_types.h  cpumask_op.h  example_yield.c  main.c  sched_errno.h  sched_mutex.c  sched_mutex.h  sched_mutex_debug.c  sched_mutex_debug.h  sched_mutex_internal.h  sched_mutex_nodebug.h  sched_mutex_rbargumented.h  sched_mutex_rbtree.c  sched_mutex_types.h  sched_rbtree.h  sched_rbtree_types.h  sched_skip_list.c  sched_task.c  sched_task.h  sched_task_flags.h  sched_task_types.h  sched_timer.h  sched_timer_types.h  sched_types.h  sched_utils.c  (+6 more)
c_cpp/c_spinlocks/: README.md  barrier.h  spinlocks.h  spinlocks_mcs.h  spinlocks_mcs_types.h  spinlocks_q.c  spinlocks_q.h  spinlocks_q_types.h  spinlocks_ticket.h  spinlocks_ticket_types.h  spinlocks_types.h
c_cpp/cpp_backend_webserver/: README.md  http_handler.cpp  http_handler.h  http_handler_settings.cpp  http_handler_settings.h  json_utils.h  main.cpp  roc_db_context.cpp  roc_db_context.h  roc_db_utils.cpp  roc_db_utils.h  roc_fcgi_utils.cpp  roc_fcgi_utils.h  roc_methods.cpp  roc_methods.h  roc_nodename_generator.cpp  roc_nodename_generator.h  roc_nsms_worker.cpp  roc_nsms_worker.h  roc_parser_dictionary.h  uni_log_impl.cpp  uni_log_impl.h
c_cpp/cpp_bison_flex/: README.md
c_cpp/cpp_boost_python/: README.md  python_model.h  python_module.cpp
c_cpp/cpp_boost_spirit/: README.md  roc_parser.cpp  roc_parser.h
c_cpp/cpp_embedded/: README.md
c_cpp/cpp_game/: README.md  application.cpp  game.cpp  gamethread.cpp  primitives.cpp  primitives.h
c_cpp/cpp_makefiles/: README.md
c_cpp/cpp_makefiles/cmake/: CMakeLists.txt
c_cpp/cpp_network/: README.md  tcp_driver.cpp  tcp_driver.h  tty_driver.cpp  tty_driver.h
c_cpp/cpp_ora2lin/: .clang_complete  README.md  anydata.cpp  anydata.h  blobtype.cpp  blobtype.h  codegen_function.cpp  codegenerator.cpp  codegenerator.h  codespacer.h  codestream.cpp  codestream.h  codestream_indenter.cpp  codestream_indenter.h  dependenciesstruct.cpp  dependenciesstruct.h  depworkflow.h  dstring.h  dynamic_sql.cpp  dynamic_sql.h  dynamic_sql_op.cpp  dynamic_sql_op.h  error_codes.cpp  error_codes.h  formal_translator.cpp  (+76 more)
js/: README.md
mics/: README.md
python/: README.md
science/: .README.md.swp  2015 Using confidence coefficients in the LP-inference.doc  README.md
sql_plpgsql/: README.md
(+1042 files in other folders)
